--- a/serviceProviderNodeJSPassport/config/config.json
+++ b/serviceProviderNodeJSPassport/config/config.json
@@ -10,13 +10,13 @@
     "userInfoURL": "https://fcp.integ01.dev-franceconnect.fr/api/v1/userinfo",
     "logoutURL":"https://fcp.integ01.dev-franceconnect.fr/api/v1/logout",
     "acr_values":"eidas2",
-    "scope": ["profile", "email", "address", "phone", "openid"]
+    "scope": ["profile", "email", "address", "phone", "openid", "birth"]
   },
   "oauth": {
     "authorizationURL": "https://fcp.integ01.dev-franceconnect.fr/api/v1/authorize",
     "tokenURL": "https://fcp.integ01.dev-franceconnect.fr/api/v1/token",
     "callbackURL": "http://localhost:3001/data/callback",
-    "scopes": ["dgfip_revenu_fiscal_de_reference"]
+    "scopes": ["dgfip_revenu_fiscal_de_reference", "cpam_attestation_droit", "edf_adresse_postale"]
   },
   "quotientFamilialURL": "https://fdp.integ01.dev-franceconnect.fr/quotientFamilial"
 }
