--- a/serviceProviderNodeJSPassport/package.json
+++ b/serviceProviderNodeJSPassport/package.json
@@ -6,12 +6,14 @@
     "start": "./bin/www"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-session": "^1.8.2",
+    "jsonwebtoken": "^8.1.0",
     "jwt-simple": "^0.3.1",
     "lodash": "~2.4.1",
     "morgan": "~1.3.0",
