--- a/serviceProviderNodeJSPassport/package.json
+++ b/serviceProviderNodeJSPassport/package.json
@@ -7,23 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express": "~4.9.0",
-    "express-session": "^1.8.2",
-    "jsonwebtoken": "^8.1.0",
-    "jwt-simple": "^0.3.1",
-    "lodash": "~2.4.1",
-    "morgan": "~1.3.0",
-    "oauth": "~0.9.12",
-    "passport": "~0.2.1",
-    "passport-oauth": "^1.0.0",
-    "passport-openidconnect": "0.0.1",
-    "remove": "~0.1.5",
-    "request": "~2.45.0",
-    "serve-favicon": "~2.1.5"
+    "express": "~4.9.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
