--- a/serviceProviderNodeJS/package.json
+++ b/serviceProviderNodeJS/package.json
@@ -8,6 +8,16 @@
   "dependencies": {
     "axios": "^0.17.1",
     "ejs": "~0.8.5",
-    "express": "~4.9.0"
+    "eslint": "^4.13.1",
+    "express": "~4.9.0",
+    "jwt-simple": "^0.5.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
