--- a/serviceProviderNodeJSPassport/package.json
+++ b/serviceProviderNodeJSPassport/package.json
@@ -9,7 +9,7 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
-    "ejs": "^2.5.7",
+    "ejs": "~2.5.5",
     "express": "~4.9.0",
     "express-session": "^1.8.2",
     "jwt-simple": "^0.3.1",
