--- a/NodeJSES6/package.json
+++ b/NodeJSES6/package.json
@@ -4,7 +4,7 @@
   "description": "test du btn fc en tant que fc",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "NODE_ENV=production nodemon ./bin/www",
     "test": "NODE_ENV=test mocha -R spec ./test/* --require babel-polyfill --require babel-register",
     "lint": "eslint ."
   },
@@ -22,7 +22,8 @@
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
     "openid-client": "^2.1.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "sessionstore": "^1.3.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
