--- a/NodeJSES6/config/config.json
+++ b/NodeJSES6/config/config.json
@@ -6,8 +6,8 @@
   "LOGOUT_URL": "https://fcp.integ01.dev-franceconnect.fr/api/v1/logout",
   "CLIENT_SECRET": "09a1a257648c1742c74d6a3d84b31943",
   "SECRET_KEY": "7ae4fef2aab63fb78d777fe657b7536f",
-  "REDIRECT_URL": "http://localhost:3000/callback",
-  "LOGOUT_REDIRECT_URL": "http://localhost:3000/logged-out",
+  "REDIRECT_URL": "https://fsp1.integ01.dev-franceconnect.fr/callback",
+  "LOGOUT_REDIRECT_URL": "https://fsp1.integ01.dev-franceconnect.fr/logged-out",
   "SCOPE": "openid profile birth",
   "FD_MOCK_URL": "https://fdp.integ01.dev-franceconnect.fr",
   "FD_MOCK_URL_DGFIP_END_POINT": "https://fdp.integ01.dev-franceconnect.fr/dgfip",
